Fix shutdown histograms on browser closing.

Shutdown histograms were not properly written because of several issues:
1) There are Races on several browsers shutdown between
BrowserList::RemoveBrowser and Browser::OnWindowClosing functions.
2) During the closure of the browser we are trying to find if there is any
background Chrome applications with help of KeepAliveRegistry::IsKeepingAlive()
function call, which is actually tracking running Browsers also (i.e. it can
return true even if there is no background application). So it is needed to
introduce new function to track background applications only.

R=sky@chromium.org
BUG=707147
BUG=707144

Change-Id: If4f7c080965c95e2c0b810817e94a09f3a52ba51